startup to business

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -8,7 +8,7 @@
         <img src="/assets/images/chatstart_icon_32.png" alt="ChatStart" width="32" height="32" 
           style="vertical-align: middle; display: inline-block;">
       </a>
-      ChatStart to accelerate your ChatGPT powered startup!
+      ChatStart to accelerate your ChatGPT powered business!
     </b>
     &nbsp;<a href="https://chatstart.gumroad.com/l/chatgpt" class="cta-button">Get ChatStart</a>
   </p>
