--- a/overrides/main.html
+++ b/overrides/main.html
@@ -3,13 +3,13 @@
 {% block announce %}
   <p>
     <b>
-      We have launched&nbsp;
+      Please visit&nbsp;
       <a href="https://chatstart.gumroad.com/l/chatgpt">
         <img src="/assets/images/chatstart_icon_32.png" alt="ChatStart" width="32" height="32" 
           style="vertical-align: middle; display: inline-block;">
       </a>
-      ChatStart to accelerate your ChatGPT powered business!
+      ChatStart to accelerate your Generative AI powered business!
     </b>
-    &nbsp;<a href="https://chatstart.gumroad.com/l/chatgpt" class="cta-button">Get ChatStart</a>
+    &nbsp;<a href="https://chatstart.gumroad.com/l/chatgpt" class="cta-button">Support makers of PromptxAI</a>
   </p>
 {% endblock %}
