--- a/overrides/main.html
+++ b/overrides/main.html
@@ -13,3 +13,15 @@
     &nbsp;<a href="https://chatstart.gumroad.com/l/chatgpt" class="cta-button">Support makers of PromptxAI</a>
   </p>
 {% endblock %}
+
+{% block content %}  
+  <a href="https://www.producthunt.com/posts/promptxai-generative-ai-playbook?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-promptxai&#0045;generative&#0045;ai&#0045;playbook" target="_blank">
+    <img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=383590&theme=light" 
+      alt="PromptxAI&#0032;Generative&#0032;AI&#0032;Playbook - Accelerate&#0032;your&#0032;generative&#0032;AI&#0032;value&#0032;creation&#0032;and&#0032;impact | Product Hunt" 
+      style="width: 250px; height: 54px; display: block; text-align: center;" 
+      width="250" height="54" />
+  </a>
+  <br/>
+  {{ super() }}
+{% endblock %}
+
