--- a/overrides/main.html
+++ b/overrides/main.html
@@ -4,13 +4,14 @@
   <p>
     <b>
       Please visit&nbsp;
-      <a href="https://chatstart.gumroad.com/l/chatgpt">
+      <a href="https://promptx.ai/chatstart-app">
         <img src="/assets/images/chatstart_icon_32.png" alt="ChatStart" width="32" height="32" 
           style="vertical-align: middle; display: inline-block;">
       </a>
-      ChatStart to accelerate your Generative AI powered business!
+      <a href="https://promptx.ai/chatstart-app" class="cta-link">ChatStart</a>
+      &nbsp;to accelerate your Generative AI powered business!
     </b>
-    &nbsp;<a href="https://chatstart.gumroad.com/l/chatgpt" class="cta-button">Support makers of PromptxAI</a>
+    &nbsp;<a href="https://chatstart.promptx.ai/l/chatgpt" class="cta-button">Get ChatStart Offers</a>
   </p>
 {% endblock %}
 
